@@ -1,32 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2009/12/11 10:46:58 drochner Exp $
-lib/dia/libpython_plugin.la
-share/dia/python-startup.py
-share/dia/python-startup.pyc
-share/dia/python/allprops.py
-share/dia/python/allprops.pyc
-share/dia/python/aobjects.py
-share/dia/python/aobjects.pyc
-share/dia/python/codegen.py
-share/dia/python/codegen.pyc
-share/dia/python/diasvg.py
-share/dia/python/diasvg.pyc
-share/dia/python/diasvg_import.py
-share/dia/python/diasvg_import.pyc
-share/dia/python/dot.py
-share/dia/python/dot.pyc
-share/dia/python/doxrev.py
-share/dia/python/doxrev.pyc
-share/dia/python/gtkcons.py
-share/dia/python/gtkcons.pyc
-share/dia/python/imgmap.py
-share/dia/python/imgmap.pyc
-share/dia/python/otypes.py
-share/dia/python/otypes.pyc
-share/dia/python/pydiadoc.py
-share/dia/python/pydiadoc.pyc
-share/dia/python/scascale.py
-share/dia/python/scascale.pyc
-share/dia/python/select_by.py
-share/dia/python/select_by.pyc
-share/dia/python/select_empty.py
-share/dia/python/select_empty.pyc
