@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2518 2024/04/17 12:33:53 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2519 2024/04/17 12:59:30 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4172,3 +4172,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed devel/diffuse [wiz 2024-04-17]
 	Updated devel/libappindicator to 12.10.0nb24 [wiz 2024-04-17]
 	Removed graphics/comix successor graphics/py-mcomix [wiz 2024-04-17]
+	Removed graphics/dia-python [wiz 2024-04-17]
